--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thai Cornelius - Full Stack Developer</title>
-    <meta name="description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies. Building exceptional digital experiences.">
+    <meta name="description" content="Full Stack Developer specializing in React, Node.js, and more modern web technologies. Building exceptional digital experiences.">
   </head>
   <body>
     <div id="root"></div>
